--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "impress.js": "~0.5.3",
     "handlebars": "~1.0.0",
-    "jquery": "~1.10"
+    "jquery": "~1.10",
+    "moment": "~2.9.0",
+    "d3": "~3.5.5"
   }
 }
